modified:   index.html 	modified:   index_en.html 	modified:   index_es.html 	modified:   style.css 	modified:   style_preset.css

--- a/index.html
+++ b/index.html
@@ -123,42 +123,10 @@
 
 
     <div class="title">
-        <div class="goto">
-            <h1 class="header-h1">Study in Beijing</h1>
-            <span class="material-symbols-outlined">
-                note_stack
-            </span>
-            <a href="http://101.201.110.101:8090/" class="clickbtn">
-                博客
-            </a>
-            <span class="material-symbols-outlined">
-                forum
-            </span>
-            <a href="http://101.201.110.101:3800/" class="clickbtn">
-                论坛
-            </a>
-        </div>
-        
-        <div class="language-selector">
-            <span class="material-symbols-outlined">
-                language
-            </span>
-            <li class="dropdown">
-                <a href="#" class="dropbtn" id="current-language">
-                    Choose Language
-                </a>
-                <div class="dropdown-content">
-                    <a href="index.html">中文</a>
-                    <a href="index_en.html">English</a>
-                    <a href="index_es.html">Español</a>
-                </div>
-            </li>
-        </div>
-
         <!-- 标题区域 -->
         <div class="bgimg-1"></div>
         <div class="title-text">
-            <span class="title-text-large">“跨界”<br>使者</span>
+            <span class="title-text-large">单亲<br>妈妈</span>
             <p style="height: 20px;"></p>
             <span class="title-text-secondary">跨文化视野下的在京留学生调查</span>
         </div>
@@ -287,7 +255,7 @@
             </div>
         </div>
         <!-- 正文 -->
-        <div style="background-color: var(--color-light-blue);">
+        <div style="background-color: var(--color-light-pink);">
             <div class="container col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
                 class="d-flex justify-content-center">
                 <p class="m-auto  line-height-3">
@@ -548,7 +516,7 @@
 
 
     <!-- 第四章 -->
-    <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-light-blue);">
+    <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-light-pink);">
         <div class="container pt-5">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
@@ -608,11 +576,12 @@
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
                     <div class="section-title text-center">
                         <p class="m-auto line-height-3">
-                            《跨文化交际视野下的在京高校留学生认知与适应效果的实况研究》
+                            《不知道起啥名字》
                         </p>
                         <span class="d-flex justify-content-center"></span>
-                        <p class="m-auto line-height-3">小组成员：夏荣鑫 张斐 谢建双</p>
-                        <p class="m-auto line-height-3">数据收集：夏荣鑫 张斐</p>
+                        <p class="m-auto line-height-3">小组成员：张思锐 韩子涵 张鹤馨 谢建双</p>
+                        <p class="m-auto line-height-3">数据收集：张思锐 韩子涵 谢建双</p>
+                        <p class="m-auto line-height-3">网站设计：张鹤馨</p>
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">资料引用：</p>
