--- a/index_es.html
+++ b/index_es.html
@@ -329,7 +329,7 @@
             </div>
         </div>
         <!-- Contenido Principal -->
-        <div style="background-color: var(--color-light-blue);">
+        <div style="background-color: var(--color-light-pink);">
             <div class="container col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
                 class="d-flex justify-content-center">
                 <p class="m-auto  line-height-3">
@@ -739,7 +739,7 @@
     </div>
 
     <!-- Capítulo Cuatro -->
-    <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-light-blue);">
+    <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-light-pink);">
         <div class="container pt-5">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
