modified:   README.md 	modified:   img/title1.png 	modified:   img/title2.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 导航栏区域 -->
     <div id="chapter-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Study in Beijing</h1>
+            <h1 class="adding-title">Test</h1>
             <h4 class="m-auto">在华留学生：文化的“跨界”使者</h4>
         </div>
         <div class="mobile-content">
@@ -39,7 +39,7 @@
 
     <div id="chapter-2-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Study in Beijing</h1>
+            <h1 class="adding-title">Test</h1>
             <h4 class="m-auto">第二章 | 在华留学生与文化适应</h4>
         </div>
         <div class="mobile-content">
@@ -50,7 +50,7 @@
 
     <div id="chapter-3-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Study in Beijing</h1>
+            <h1 class="adding-title">Test</h1>
             <h4 class="m-auto">第三章 | 在华留学生与文化交际</h4>
         </div>
         <div class="mobile-content">
@@ -61,7 +61,7 @@
 
     <div id="chapter-4-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Study in Beijing</h1>
+            <h1 class="adding-title">Test</h1>
             <h4 class="m-auto">第四章 | 展望</h4>
         </div>
         <div class="mobile-content">
