new file:   "img/DALL\302\267E 2024-05-13 09.15.39 - A wide format illustration depicting the journey of motherhood, showing a mother with her child at various stages of growth against a solid pink backg.webp" 	deleted:    img/chapter2.jpg 	new file:   img/chapter2.png 	modified:   index.html 	modified:   style.css 	modified:   style_preset.css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 导航栏区域 -->
     <div id="chapter-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Test</h1>
+            <h1 class="adding-title">TEST-LEFT</h1>
             <h4 class="m-auto">在华留学生：文化的“跨界”使者</h4>
         </div>
         <div class="mobile-content">
@@ -39,7 +39,7 @@
 
     <div id="chapter-2-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Test</h1>
+            <h1 class="adding-title">TEST-LEFT</h1>
             <h4 class="m-auto">第二章 | 在华留学生与文化适应</h4>
         </div>
         <div class="mobile-content">
@@ -50,7 +50,7 @@
 
     <div id="chapter-3-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Test</h1>
+            <h1 class="adding-title">TEST-LEFT</h1>
             <h4 class="m-auto">第三章 | 在华留学生与文化交际</h4>
         </div>
         <div class="mobile-content">
@@ -61,7 +61,7 @@
 
     <div id="chapter-4-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">Test</h1>
+            <h1 class="adding-title">TEST-LEFT</h1>
             <h4 class="m-auto">第四章 | 展望</h4>
         </div>
         <div class="mobile-content">
@@ -221,7 +221,7 @@
     <div class="section bgimg-2" id="chapter-2">
         <!-- 标题 -->
         <div class="bgimg-2"> <!-- 视差滚动 -->
-            <div style="background-color: rgba(255, 255, 255, 0.7)">
+            <div style="background-color: rgba(255, 255, 255, 0.85)">
                 <div class="container pt-5 row col-12 mx-auto" data-aos="fade-up" data-aos-duration="1100">
                     <div class="section-title text-center">
                         <div id="chapter-2-title"> <!-- 第二章标题 -->
@@ -255,7 +255,7 @@
             </div>
         </div>
         <!-- 正文 -->
-        <div style="background-color: var(--color-light-pink);">
+        <div style="background-color: var(--color-bg-pink);">
             <div class="container col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
                 class="d-flex justify-content-center">
                 <p class="m-auto  line-height-3">
@@ -516,7 +516,7 @@
 
 
     <!-- 第四章 -->
-    <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-light-pink);">
+    <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-bg-pink);">
         <div class="container pt-5">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
