modified:   data/money.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -876,9 +876,9 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在中国，单亲母亲群体面临的挑战同样显著且复杂。由于相关总体资料的缺失，我们只能从部分资料中窥见一斑。
                 </p>
                 <div class="col-md-6">
-                    <div class="chart-center" id="money"></div>
+                    <div class="chart-center" id="money-chart"></div>
                     <p class="small m-auto line-height-3 text-start"> <!-- 这是数据注释 -->
-                        数据来源：EPS数据平台 中国民政数据库
+                        数据来源：《十城市单亲母亲生活状况及需求调研报告》
                     </p>
                 </div>
                 <p class="m-auto line-height-3">
@@ -1235,5 +1235,5 @@
 <script src="data/qcountry.js"></script>
 <script src="data/main.js"></script>
 <script src="data/devorce-detail.js"></script>
-
+<script src="data/money.js"></script>
 </html>
