modified:   data/money.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -875,12 +875,11 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在中国，单亲母亲群体面临的挑战同样显著且复杂。由于相关总体资料的缺失，我们只能从部分资料中窥见一斑。
                 </p>
-                <div class="col-md-6">
+
                     <div class="chart-center" id="money-chart"></div>
-                    <p class="small m-auto line-height-3 text-start"> <!-- 这是数据注释 -->
+                    <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
                         数据来源：《十城市单亲母亲生活状况及需求调研报告》
                     </p>
-                </div>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;根据《十城市单亲母亲生活状况及需求调研报告》的数据，34.3%的单亲母亲月收入在2000元及以下，29.2%在2001-4000元之间。月收入在4001-6000元的占25.4%，在6001-10000元的占17.8%，月收入超过10000元的仅占6.2%。
                 </p>
