--- a/index.html
+++ b/index.html
@@ -149,13 +149,17 @@
     <div class="title">
         <!-- 标题区域 -->
         <div class="bgimg-1"></div>
-        <div class="desktop-content">
+        <video autoplay muted loop id="bg-video">
+            <source src="漫画/title.mp4" type="video/mp4">
+            您的浏览器不支持视频标签。
+        </video>
+        <!-- <div class="desktop-content">
             <div class="title-text">
                 <span class="title-text-large">“快来抱抱她”</span>
                 <p style="height: 0px;"></p>
                 <span class="title-text-secondary">不被看见的单亲母亲群体困境</span>
             </div>
-        </div>
+        </div> -->
         <div class="mobile-content">
             <div class="title-text">
                 <span class="title-text-large-latin">“快来抱抱她”</span>
