modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
             <source src="漫画/title.mp4" type="video/mp4">
             您的浏览器不支持视频标签。
         </video>
-        <!-- <div class="desktop-content">
+        <div class="desktop-content">
             <div class="title-text">
                 <span class="title-text-large">“快来抱抱她”</span>
                 <p style="height: 0px;"></p>
                 <span class="title-text-secondary">不被看见的单亲母亲群体困境</span>
             </div>
-        </div> -->
+        </div>
         <div class="mobile-content">
             <div class="title-text">
                 <span class="title-text-large-latin">“快来抱抱她”</span>
@@ -718,6 +718,12 @@
                 <p class="m-auto line-height-3 font-songti-large text-center">
                     那现实生活中，单亲母亲的真实处境是怎么样的？
                 </p>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8 m-b-50" id="intro-video">
+                        <img src="漫画/进入房子动画/按键.png"> <!-- 这是一张图片 -->
+
+                    </div>
+                </div>
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">“被忽视”的她们&nbsp;</p>
