--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <source src="漫画/title.mp4" type="video/mp4">
             您的浏览器不支持视频标签。
         </video>
-        <div class="desktop-content">
+        <div class="desktop-content" id="alt-title">
             <div class="title-text">
                 <span class="title-text-large">“快来抱抱她”</span>
                 <p style="height: 0px;"></p>
@@ -167,7 +167,6 @@
                 <span class="title-text-secondary-latin">不被看见的<br>单亲母亲群体困境</span>
             </div>
         </div>
-
     </div>
     <!-- Title Section End -->
 
