--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
             <source src="漫画/title.mp4" type="video/mp4">
             您的浏览器不支持视频标签。
         </video>
-        <div class="desktop-content" id="alt-title">
+        <!-- <div class="desktop-content" id="alt-title">
             <div class="title-text">
                 <span class="title-text-large">“快来抱抱她”</span>
                 <p style="height: 0px;"></p>
                 <span class="title-text-secondary">不被看见的单亲母亲群体困境</span>
             </div>
-        </div>
+        </div> -->
         <div class="mobile-content">
             <div class="title-text">
                 <span class="title-text-large-latin">“快来抱抱她”</span>
@@ -720,7 +720,10 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-8 m-b-50" id="intro-video">
                         <img src="漫画/进入房子动画/按键.png"> <!-- 这是一张图片 -->
-
+                        <video autoplay muted loop>
+                            <source src="漫画/进入房子动画/敲门.mp4" type="video/mp4">
+                            您的浏览器不支持视频标签。
+                        </video>
                     </div>
                 </div>
                 <div class="comic-container"> <!-- 这是小标题 -->
