modified:   index.html 	modified:   main_js_for_test.js 	modified:   style_for_test.css

--- a/index.html
+++ b/index.html
@@ -719,13 +719,13 @@
                 </p>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-8 m-b-50" id="intro-video">
-                        <img src="漫画/进入房子动画/按键.png"> <!-- 这是一张图片 -->
-                        <video autoplay muted loop>
+                        <img src="漫画/进入房子动画/按键.png" id="play-button"> <!-- 这是一张图片 -->
+                        <video id="intro-video-element" style="display:none;">
                             <source src="漫画/进入房子动画/敲门.mp4" type="video/mp4">
                             您的浏览器不支持视频标签。
                         </video>
                     </div>
-                </div>
+                </div>                               
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">“被忽视”的她们&nbsp;</p>
@@ -1214,9 +1214,17 @@
                     </div>
                 </div>
                 <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
-                <p class="m-auto line-height-3 font-songti-large">
+                <p class="m-auto line-height-3 font-songti-large text-center">
                     “再见，女士！祝你永远明媚，和小天使一切安好！”
                 </p>
+                <p class="m-auto line-height-3 font-songti-large text-center">
+                    “再见！”
+                </p>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8 m-b-50">
+                        <img src="漫画/告别.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
             </div>
             <div id="chapter-4-bottom"></div> <!-- 底部 -->
             <div class="padding-bottom"></div>
