modified:   index.html 	modified:   main_js_for_test.js 	modified:   style_for_test.css

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在当代的影视作品中，单亲母亲的形象塑造常常成为网络上的热门话题。在《隐秘的角落》中，朱朝阳的母亲，一位与前夫离婚后对儿子有着强烈控制欲的单亲妈妈，她对于儿子的教育方式引发了广泛的讨论；《我是真的爱你》中，单身母亲陈娇蕊离婚带娃依然“狠遍职场”，给人留下深刻印象；《好事成双》中，张小斐试验的林双为带女儿辞职在家，也为了和水性杨花的丈夫争夺女儿抚养权孤注一掷、放手一搏；而在《加油！妈妈》中，张雨绮饰演的单亲妈妈在工作和家庭的双重压力下，依然积极面对生活，触动许多网友的心弦。
                 </p>
-                <p class="m-auto line-height-3 font-songti-large text-center">
+                <p class="m-auto line-height-3 font-songti-large text-center" id="intro-title">
                     那现实生活中，单亲母亲的真实处境是怎么样的？
                 </p>
                 <div class="row justify-content-center">
@@ -725,16 +725,13 @@
                             您的浏览器不支持视频标签。
                         </video>
                     </div>
-                </div>                               
+                </div>
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">“被忽视”的她们&nbsp;</p>
                     </div>
                 </div>
 
-                <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;漫画预留位置
-                </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;回首当下，社会关注的点往往只是母亲作为一个照顾者、教育者和家庭内务的角色，而关于单亲家庭的研究和报道大多从青少年的视角出发，聚焦于他们的心理健康、学业成绩和社会适应等问题，却鲜少深入探讨单亲母亲在家庭和社会中的角色、她们面临的挑战和需求。
                 </p>
@@ -744,7 +741,15 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;文献显示，目前对单亲母亲的研究还不够全面、系统，缺少从单亲母亲自身角度出发的研究，缺乏她们自己的声音。而同样是基于文献发现，单亲母亲普遍面临经济压力、子女教育问题、再婚问题、住房问题、社会歧视及人际关系问题等多重困境。
                 </p>
-
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <p class="m-auto line-height-3 font-songti-large text-center">
+                    “看，那是我的奖杯。辞职带娃前我也曾光芒万丈”
+                </p>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8 m-b-50">
+                        <img src="漫画/展示奖杯.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">“被牺牲”的单亲母亲</p>
@@ -865,6 +870,16 @@
         <div class="col-12 section-title text-start" style="padding-bottom: 0px;" data-aos="fade-up"
             data-aos-duration="1100">
             <div class="container pt-5">
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <p class="m-auto line-height-3 font-songti-large text-center">
+                    “我老是工作到很晚，等我回家，孩子都睡了。”
+                </p>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8 m-b-50">
+                        <img src="漫画/嘘他在睡觉.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">单亲母亲与单亲父亲群体差异</p>
@@ -1214,17 +1229,26 @@
                     </div>
                 </div>
                 <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8 m-b-50">
+                        <img src="漫画/手机闹钟响动图.GIF"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
+                <p class="m-auto line-height-3 font-songti-large text-center">
+                    “好啦小锐，我要去接宝贝回家了，希望我的故事能对你们的调查有所帮助，也希望有更多的人关注单亲母亲的群体，号召更多的力量支持我们！”
+                </p>
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8 m-b-50">
+                        <img src="漫画/告别.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
                 <p class="m-auto line-height-3 font-songti-large text-center">
                     “再见，女士！祝你永远明媚，和小天使一切安好！”
                 </p>
                 <p class="m-auto line-height-3 font-songti-large text-center">
                     “再见！”
                 </p>
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-8 m-b-50">
-                        <img src="漫画/告别.png"> <!-- 这是一张图片 -->
-                    </div>
-                </div>
             </div>
             <div id="chapter-4-bottom"></div> <!-- 底部 -->
             <div class="padding-bottom"></div>
@@ -1248,7 +1272,7 @@
                         <p class="m-auto line-height-3">数据收集：谢建双 张思锐 张鹤馨</p>
                         <p class="m-auto line-height-3">文献调研：谢建双 张思锐 张鹤馨</p>
                         <p class="m-auto line-height-3">网站制作及数据可视化：谢建双</p>
-                        <p class="m-auto line-height-3">平面设计：张鹤馨</p>
+                        <p class="m-auto line-height-3">平面设计及绘画：张鹤馨</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">内容文案</p>
                         <p class="m-auto line-height-3">文案撰写及配图制作：张思锐 韩子涵 谢建双</p>
