--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">以下人员对本文亦有贡献</p>
                         <p class="m-auto line-height-3">深度访谈：韩子涵</p>
-                        <p class="m-auto line-height-3">（感谢愿意参与深访的五位单亲母亲）</p>
+                        <p class="m-auto line-height-3">（感谢愿意参与深访的单亲母亲）</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">资料引用：</p>
                         <p class="small m-auto line-height-3 text-start">
