modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1273,11 +1273,11 @@
                         <p class="m-auto line-height-3">文献调研：谢建双 张思锐 张鹤馨</p>
                         <p class="m-auto line-height-3">网站制作及数据可视化：谢建双</p>
                         <p class="m-auto line-height-3">平面设计及绘画：张鹤馨</p>
-                        <!-- <span class="d-flex justify-content-center split"></span>
-                        <p class="m-auto line-height-3 small">内容文案</p>
-                        <p class="m-auto line-height-3">文案撰写及配图制作：张思锐 韩子涵 谢建双</p> -->
                         <span class="d-flex justify-content-center split"></span>
-                        <p class="m-auto line-height-3 small">以下人员对本文亦有贡献</p>
+                        <p class="m-auto line-height-3 small">内容文案</p>
+                        <p class="m-auto line-height-3">文案撰写及配图制作：张思锐 韩子涵 谢建双</p>
+                        <span class="d-flex justify-content-center split"></span>
+                        <p class="m-auto line-height-3 small">个案探析</p>
                         <p class="m-auto line-height-3">深度访谈：韩子涵</p>
                         <p class="m-auto line-height-3">（感谢愿意参与深访的单亲母亲）</p>
                         <span class="d-flex justify-content-center split"></span>
